docs/envoy/v1.6.0/_sources/api-v2/config/filter/http/buffer/v2/buffer.proto.rst.txt
.. _envoy_api_file_envoy/config/filter/http/buffer/v2/buffer.proto:

Buffer
======

Buffer :ref:`configuration overview <config_http_filters_buffer>`.

.. _envoy_api_msg_config.filter.http.buffer.v2.Buffer:

config.filter.http.buffer.v2.Buffer
-----------------------------------

`[config.filter.http.buffer.v2.Buffer proto] <https://github.com/envoyproxy/data-plane-api/blob/master/envoy/config/filter/http/buffer/v2/buffer.proto#L14>`_


.. code-block:: json

  {
    "max_request_bytes": "{...}",
    "max_request_time": "{...}"
  }

.. _envoy_api_field_config.filter.http.buffer.v2.Buffer.max_request_bytes:

max_request_bytes
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) The maximum request size that the filter will buffer before the connection
  manager will stop buffering and return a 413 response.
  
  
.. _envoy_api_field_config.filter.http.buffer.v2.Buffer.max_request_time:

max_request_time
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) The maximum number of seconds that the filter will wait for a complete
  request before returning a 408 response.
  
  

